PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ReturnStatementExists3.par
ReturnStatementExists3 {
var Int test = 0
seq add(Int input) : Void {
    input++
}
seq main() : Void {
    add(test)

}
}