PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/PredefinedFunctionParameterCount2.par
PredefinedFunctionParameterCount2 {

seq main() : Void {
    var Bool test = isnan()

}
}